US2 - Added welcome headers

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <html>
-
+<head>
+  <title>Inventory Hub</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <h2 class="welcome">Welcome to Inventory Hub!</h2>
+</body>
 </html>
